force-app/main/default/objects/Pg_Hostel__c/Pg_Hostel__c.object-meta.xml
<CustomObject>
    <description>how many memebers of  pg  hostel are there</description>
    <label>Pg Hostel</label>
    <nameField>
        <label>Pg Hostel  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pg Hostels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>