force-app/main/default/objects/Pg_Hostel__c/fields/Leaving_Date__c.field-meta.xml
<CustomField>
    <fullName>Leaving_Date__c</fullName>
    <label>Leaving Date</label>
    <type>Date</type>
</CustomField>