force-app/main/default/objects/Pg_Hostel__c/fields/No_Of_Students__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Students__c</fullName>
    <label>No, Of Students</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>