force-app/main/default/objects/Pg_Hostel__c/fields/Pg_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Pg_Owner_Name__c</fullName>
    <label>Pg Owner Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>