force-app/main/default/objects/Pg_Hostel__c/fields/Room_no__c.field-meta.xml
<CustomField>
    <fullName>Room_no__c</fullName>
    <label>Room no</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>