force-app/main/default/objects/Pg_Hostel__c/fields/Student_Mob_Number__c.field-meta.xml
<CustomField>
    <fullName>Student_Mob_Number__c</fullName>
    <label>Student Mob Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>