force-app/main/default/objects/Pg_Hostel__c/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <label>Training</label>
    <referenceTo>Training__c</referenceTo>
    <relationshipLabel>Pg Hostels</relationshipLabel>
    <relationshipName>Pg_Hostels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>